# python_research_software_templete

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  conf.py  index.rst  netlify.toml  pyproject.toml  python_research_software_templete.qmd  setup-rye.sh  setup-uv.sh
.github/workflows/: apply_lint_and_test.yaml  gh-pages.yml
docs/: Makefile  _quarto.yml
docs/source/: conf.py  index.rst
notebook/: your_notebook.ipynb
python_research_software_templete/: sample.py
source/: conf.py  index.rst
tests/: test_sample.py
