[project]
name = "python_research_software_templete"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wakabame", email = "wakabame89@gmail.com" }
]
dependencies = [
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    "ruff>=0.7.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "mypy>=1.13.0",
    "jupyter>=1.1.1",
    "quartodoc>=0.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["python_project_templete"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
exclude = '''
(
    venv
    | .mypy_cache
    | .pytest_cache
)
'''
